# pleiades_ai_search

./: .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
src/pleiades/: __init__.py  prompts.py  search_result.py
